syntax = "proto3";

import "Protos/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "RestAndGrpcApp.Protos";

service WeatherForecastGrpcService {
  rpc GetWeatherForecasts(google.protobuf.Empty) returns (WeatherForecasts) {
    option (google.api.http) = {
	  get: "/Grpc/WeatherForecast"
	};
  };

  rpc GetWeatherForecastsByQty(WeatherForecastRequest) returns (WeatherForecasts) {
    option (google.api.http) = {
	  get: "/Grpc/WeatherForecast/{qty}"
	};
  };
}

message WeatherForecasts {
  repeated WeatherForecast forecasts = 1;
}

message WeatherForecast {
	google.protobuf.Timestamp date = 1;
	int32 temperatureC = 2;
	int32 temperatureF = 3;
	google.protobuf.StringValue summary = 4;
}

message WeatherForecastRequest {
	int32 qty = 1;
}